# molecular-formulas

./: .gitignore  Cargo.toml  README.md  cobertura.xml  worst_mismatches.md
.github/workflows/: rust.yml
benches/: chemical_formula_benchmark.rs  inchi_benchmark.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: from_str.rs
src/: errors.rs  fuzzing.rs  index.rs  ion.rs  is_hill_sorted.rs  iter_elements.rs  lib.rs  molecular_formula.rs  molecular_tree.rs  nodes.rs  parsable.rs  parser.rs  serde_impl.rs  token.rs  utils.rs
src/molecular_formula/: charge.rs  chemical_formula.rs  contains_elements.rs  contains_isotopes.rs  contains_mixtures.rs  contains_residual.rs  countable.rs  diatomic.rs  display.rs  element_count.rs  from.rs  from_str.rs  homonuclear.rs  inchi_formula.rs  isotopologue_mass.rs  isotopologue_mass_over_charge.rs  mineral_formula.rs  molar_mass.rs  noble_gasses.rs  oxidation_states.rs  parser.rs  residual_formula.rs  serde.rs  trees.rs  try_from.rs
src/molecular_formula/parser/: tokens.rs
src/molecular_formula/parser/tokens/: subtokens.rs
src/molecular_formula/parser/tokens/subtokens/: allowed_characters.rs  complex.rs  markers.rs  residual.rs  typesetting.rs
src/molecular_formula/parser/tokens/subtokens/allowed_characters/: allowed_lowercase_letter.rs  allowed_uppercase_letter.rs  brackets.rs  digits.rs  greek_letters.rs  radicals.rs
src/molecular_formula/parser/tokens/subtokens/markers/: sign_markers.rs
src/molecular_formula/trees/: box_tree.rs  empty_tree.rs  generic_residual_tree.rs  generic_tree.rs
src/molecular_formula/trees/generic_residual_tree/: display_impl.rs  instantiable_tree_impl.rs  residual_tree_impl.rs  tree_impl.rs
src/molecular_formula/trees/generic_tree/: no_residuals_tree_impl.rs  residual_tree_impl.rs  tree_impl.rs
src/molecular_tree/: blankets.rs  chemical_tree.rs  inchi_tree.rs
src/molecular_tree/chemical_tree/: chemical_tree_element_iter.rs
src/nodes/: bracket_node.rs  charge_node.rs  element_node.rs  empty_node.rs  isotope_node.rs  radical_node.rs  repeat_node.rs  residual_node.rs  sequence_node.rs
src/parsable/: from_str_impls.rs  molecule_parser.rs  parsable_formula.rs  parsable_molecular_tree.rs  tokens.rs
src/parsable/molecule_parser/: chemical_tree_parser.rs  inchi_tree_parser.rs  mineral_formula_parser.rs  residual_tree_parser.rs
src/parsable/tokens/: inchi_tokens.rs  subtokens.rs
src/parsable/tokens/subtokens/: brackets.rs  complex.rs  digits.rs  markers.rs
src/parser/: token_iter.rs
src/token/: complex.rs
tests/: test_all_elements.rs  test_complexes.rs  test_contains_residual.rs  test_from_conversions.rs  test_fuzzing_cases.rs  test_incorrect_superscript_position.rs  test_isotopes.rs  test_isotopologue_mass_over_charge.rs  test_largest.rs  test_mineral_formula.rs  test_minerals.rs  test_mixtures.rs  test_molar_mass.rs  test_molecular_charge.rs  test_monoisotopic_mass.rs  test_ocr.rs  test_parsing.rs  test_pubchem_inchi_validation.rs  test_pubchem_validation.rs  test_radicals.rs  test_structured_parsing.rs  test_timeout_cases.rs
