[package]
name = "molecular-formulas"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", optional = true }
diesel = { version = "2.0", optional = true }
elements-rs = {git = "https://github.com/earth-metabolome-initiative/elements-rs", branch = "main"}
fmtastic = "0.2.2"
num-traits = "0.2"
multi_ranged = "0.1.1"
thiserror = "2.0.18"

[dev-dependencies]
strum = {version = "0.27.2", features = ["derive"]}
criterion = "0.8.1"
csv = "1.1"

[features]
default = ["serde"]
serde = ["dep:serde"]
diesel = ["dep:diesel"]
sqlite = ["diesel", "diesel/sqlite"]
postgres = ["diesel", "diesel/postgres"]

[[bench]]
name = "bench_oxidation_states"
harness = false

[workspace.lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"
bare_urls = "forbid"
invalid_codeblock_attributes = "forbid"
invalid_html_tags = "forbid"
missing_crate_level_docs = "forbid"
unescaped_backticks = "forbid"
redundant_explicit_links = "forbid"
invalid_rust_codeblocks = "forbid"

[workspace.lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
doc_markdown = "allow"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }
