[package]
name = "molecular_formulas_fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
honggfuzz = "0.5"
serde = "1.0"
serde_json = "1.0"
molecular-formulas = { path = "../", features = ["serde", "fuzzing"] }
arbitrary = "1.4"

[[bin]]
name = "from_str"
path = "fuzz_targets/from_str.rs"
test = false
doc = false
